# vanadinite

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-APACHE2.0  LICENSE-MIT  Makefile.toml  README.md  build.rs  dtb.dts  link.ld  rustfmt.toml
.cargo/: config  config.toml
.reuse/: dep5
book/: book.toml
common/: Cargo.toml
docs/: qemu_virt_memory_map.c  register_abi.md
fat32/: Cargo.toml
fdt/: Cargo.toml
lds/: virt.lds
src/: Cargo.toml  asm.rs  boot.rs  fdt.rs  main.rs  oldasm.s  paging.rs  trap.rs  util.rs  utils.rs
src/kernel/vanadinite/: Cargo.toml  build.rs
src/kernel/vanadinite/lds/: sifive_u.lds
src/kernel/vanadinite/src/: asm.rs  capabilities.rs  cpu_local.rs  csr.rs  main.rs  task.rs  tests.rs  trap.rs  utils.rs
src/kernel/vanadinite/src/boot/: early_paging.rs  entry.rs  mod.rs
src/kernel/vanadinite/src/drivers/: mod.rs
src/kernel/vanadinite/src/drivers/generic/: plic.rs  uart16550.rs
src/kernel/vanadinite/src/drivers/sifive/fu540_c000/: uart.rs
src/kernel/vanadinite/src/drivers/virtio/: queue.rs
src/kernel/vanadinite/src/drivers/virtio/mmio/: block.rs  common.rs
src/kernel/vanadinite/src/interrupts/: isr.rs  mod.rs
src/kernel/vanadinite/src/io/: console.rs  logging.rs  mod.rs
src/kernel/vanadinite/src/mem/: mod.rs  region.rs  user.rs
src/kernel/vanadinite/src/mem/heap/: free_list.rs  mod.rs
src/kernel/vanadinite/src/mem/manager/: address_map.rs  kernel.rs  mod.rs
src/kernel/vanadinite/src/mem/paging/: table.rs  tests.rs
src/kernel/vanadinite/src/mem/paging/table/: allocator.rs  flags.rs  repr.rs
src/kernel/vanadinite/src/mem/phys/: bitmap.rs  mod.rs
src/kernel/vanadinite/src/platform/: mod.rs
src/kernel/vanadinite/src/platform/virt/: mod.rs
src/kernel/vanadinite/src/scheduler/: mod.rs  round_robin.rs  waitqueue.rs
src/kernel/vanadinite/src/sync/: lazy.rs  mod.rs  mutex.rs  rwlock.rs
src/kernel/vanadinite/src/syscall/: capabilities.rs  channel.rs  endpoint.rs  io.rs  mem.rs  misc.rs  mod-old.rs  mod.rs  vmspace.rs
src/userspace/init/: Cargo.toml  build.rs  init.lds
src/userspace/init/.cargo/: config.toml
src/userspace/init/src/: main.rs  rt_init.rs
src/userspace/libs/loadelf/: Cargo.toml
src/userspace/libs/loadelf/src/: lib.rs
src/userspace/libs/materialize_derive/: Cargo.toml
src/userspace/libs/materialize_derive/src/: lib.rs
src/userspace/libs/present/: Cargo.toml
src/userspace/libs/present/src/: interrupt.rs  ipc.rs  join.rs  lib.rs  reactor.rs  sync.rs  waker.rs
src/userspace/libs/present/src/executor/: mod.rs  reactor.rs
src/userspace/libs/present/src/futures/: mod.rs  stream.rs
src/userspace/libs/present/src/futures/stream/: from_iter.rs  helpers.rs  map.rs  merge.rs  next.rs  then.rs
src/userspace/libs/present/src/sync/: mpsc.rs  oneshot.rs
src/userspace/libs/std/: Cargo.toml
src/userspace/libs/std/src/: env.rs  heap.rs  io.rs  ipc.rs  lib.rs  prelude.rs  rc.rs  rt.rs  sync.rs  task.rs  task_local.rs  vmspace.rs
src/userspace/libs/vidl/: Cargo.toml
src/userspace/libs/vidl/src/: core.rs  lib.rs  sync.rs
src/userspace/servers/filesystem/: Cargo.toml  build.rs
src/userspace/servers/filesystem/src/: client.rs  lib.rs  main.rs  probe.rs  waitlist.rs
src/userspace/servers/filesystem/src/block_devices/: mod.rs  virtio.rs
src/userspace/servers/filesystem/src/drivers/: mod.rs  virtio.rs
src/userspace/servers/filesystem/src/drivers/virtio/: block_device.rs  mod.rs
src/userspace/servers/filesystem/src/filesystems/: bpb.rs  fat32.rs  mod.rs  path.rs
src/userspace/servers/filesystem/src/partitions/: gpt.rs  mbr.rs  mod.rs
src/userspace/servers/filesystem/src/partitions/gpt/: guid.rs
src/userspace/servers/filesystem/vidl/: filesystem.vidl
src/userspace/servers/network/: Cargo.toml  build.rs
src/userspace/servers/network/src/: arp.rs  client.rs  dhcp_helpers.rs  lib.rs  main.rs
src/userspace/servers/network/src/drivers/: mod.rs  virtio.rs
src/userspace/servers/network/vidl/: network.vidl
src/userspace/servers/stdio/: Cargo.toml
src/userspace/servers/stdio/src/: main.rs  ns16550.rs
src/userspace/servers/virtiomgr/: Cargo.toml  build.rs
src/userspace/servers/virtiomgr/src/: lib.rs  main.rs
src/userspace/servers/virtiomgr/vidl/: virtiomgr.vidl
src/vanadinite/: Cargo.toml  build.rs
src/vanadinite/lds/: nezha.lds  sifive_u.lds  virt.lds
src/vanadinite/src/: asm.rs  cpu_local.rs  csr.rs  hart_local.rs  io.rs  main.rs  process.rs  scheduler.rs  syscall.rs  task.rs  thread_local.rs  trap.rs  utils.rs
src/vanadinite/src/arch/: csr.rs  mod.rs
src/vanadinite/src/arch/virt/: mod.rs
src/vanadinite/src/boot/: early_paging.rs  entry.rs  mod.rs
src/vanadinite/src/drivers/: mod.rs  sifive_uart.rs  uart16550.rs
src/vanadinite/src/drivers/generic/: plic.rs  uart16550.rs
src/vanadinite/src/drivers/misc/: uart16550.rs
src/vanadinite/src/drivers/sifive/fu540_c000/: clint.rs  plic.rs  uart.rs
src/vanadinite/src/drivers/sunxi/: uart.rs
src/vanadinite/src/drivers/virtio/: block.rs  queue.rs
src/vanadinite/src/drivers/virtio/mmio/: block.rs  common.rs
src/vanadinite/src/interrupts/: isr.rs  mod.rs
src/vanadinite/src/io/: block_device.rs  console.rs  logging.rs  mod.rs  terminal.rs
src/vanadinite/src/mem/: manager.rs  mod.rs  region.rs  user.rs
src/vanadinite/src/mem/heap/: free_list.rs  mod.rs
src/vanadinite/src/mem/manager/: address_map.rs  mod.rs
src/vanadinite/src/mem/paging/: manager.rs  perms.rs  region.rs  sv39.rs  table.rs
src/vanadinite/src/mem/paging/table/: allocator.rs  flags.rs  repr.rs
src/vanadinite/src/mem/phys/: bitmap.rs  mod.rs
src/vanadinite/src/platform/: mod.rs  nezha.rs  sifive_u.rs  virt.rs
src/vanadinite/src/platform/virt/: mod.rs
src/vanadinite/src/scheduler/: mod.rs  round_robin.rs
src/vanadinite/src/sync/: lazy.rs  mod.rs  mutex.rs  rwlock.rs
src/vanadinite/src/syscall/: channel.rs  exit.rs  mod.rs  print.rs  read_stdin.rs
src/vanadinite_macros/: Cargo.toml
src/vanadinite_macros/src/: lib.rs
userspace/: Cargo.toml  (+1 more)
xtask/: Cargo.toml
xtask/src/: build.rs  lib.rs  main.rs  runner.rs
(+249 files in other folders)
