[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.16", features = ["derive"] }
tar = "0.4"
walkdir = "2.3"
xshell = "0.1"
signal-hook = "0.3.7"
