[package]
name = "vanadinite"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"
#build = "build.rs"

[dependencies]
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }
elf64 = { path = "../elf64" }
fdt = { path = "../fdt" }
libvanadinite = { path = "../libvanadinite" }
log = "0.4.11"
lock_api = "0.4.1"
sbi = { path = "../sbi" }
tar = { path = "../tar" }
vanadinite_macros = { path = "../vanadinite_macros" }

[features]
default = ["virt"]

virt = []
sifive_u = []
"pmalloc.allocator.bitmap" = []
"pmalloc.allocator.buddy" = []
"vmalloc.allocator.freelist" = []
