[package]
name = "vanadinite"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

[dependencies]
crossbeam-queue = { version = "0.3.1", default-features = false, features = ["alloc"] }
elf64 = { path = "../elf64" }
fdt = { git = "https://github.com/repnop/fdt", branch = "master" }
libvanadinite = { path = "../libvanadinite" }
log = "0.4.11"
sbi = { path = "../sbi" }
tar = { path = "../tar" }
vanadinite_macros = { path = "../vanadinite_macros" }

[features]
default = ["platform.virt"]

"paging.sv48" = []
"platform.virt" = []
"platform.sifive_u" = []
"pmalloc.allocator.bitmap" = []
"pmalloc.allocator.buddy" = []
"vmalloc.allocator.freelist" = []
