[package]
name = "vanadinite"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

[dependencies]
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
elf64 = { path = "../elf64" }
fdt = "0.1.2"
librust = { path = "../librust" }
log = "0.4.14"
sbi = { path = "../sbi" }
tar = { path = "../tar" }
vanadinite_macros = { path = "../vanadinite_macros" }

[features]
default = ["platform.virt"]

"paging.sv48" = []
"platform.virt" = []
"platform.sifive_u" = []
"pmalloc.allocator.bitmap" = []
"pmalloc.allocator.buddy" = []
"vmalloc.allocator.freelist" = []
