[package]
name = "vanadinite_macros"
version = "0.1.0"
authors = ["repnop <repnop@repnop.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
proc-macro-error = "1.0.4"
quote = "1.0.9"
syn = { version = "1.0.60", features = ["full"] }
