[package]
name = "init"
version = "0.1.0"
authors = ["repnop <repnop@repnop.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librust = { path = "../../shared/librust" }
loadelf = { path = "../libs/loadelf" }
fdt = "0.1.4"
std = { path = "../libs/std", features = ["init"] }
tar = { path = "../libs/tar" }

[profile.release]
debug = false
lto = "fat"
