[package]
name = "loadelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librust = { path = "../../../shared/librust" }
std = { path = "../std", default-features = false }
elf64 = { path = "../../../shared/elf64" }
