[package]
name = "materialize_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = "1"
