[package]
name = "std"
version = "0.1.0"
authors = ["repnop <repnop@repnop.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
# Cursed, TODO: remove this once IDL is ready
json = { path = "../json" }
librust = { path = "../../../shared/librust", features = ["alloc"] }
sync = { path = "../../../shared/sync" }
