[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alchemy = { path = "../../libs/alchemy" }
checksum = { path = "../../libs/checksum" }
collections = { path = "../../../shared/collections" }
endian = { path = "../../libs/endian" }
librust = { path = "../../../shared/librust" }
present = { path = "../../libs/present" }
std = { path = "../../libs/std" }
units = { path = "../../libs/units" }
vidl = { path = "../../libs/vidl" }
virtio = { path = "../../libs/virtio" }
virtiomgr = { path = "../virtiomgr" }
volatile = { path = "../../../shared/volatile" }

[build-dependencies]
vidlgen = { path = "../../libs/vidlgen" }
