[package]
name = "stdio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = { path = "../../libs/json" }
librust = { path = "../../../shared/librust" }
std = { path = "../../libs/std" }
volatile = { path = "../../../shared/volatile" }
