[package]
name = "virtiomgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librust = { path = "../../../shared/librust" }
json = { path = "../../libs/json" }
std = { path = "../../libs/std" }
virtio = { path = "../../libs/virtio" }
volatile = { path = "../../../shared/volatile" }
